@@ -14,18 +14,13 @@ lib_LTLIBRARIES = 							\
 
 libxfce4menu_headers =							\
 	xfce-menu.h							\
+	xfce-menu-gio.h							\
 	xfce-menu-element.h						\
 	xfce-menu-separator.h						\
 	xfce-menu-layout.h						\
 	xfce-menu-directory.h						\
-	xfce-menu-rules.h						\
-	xfce-menu-standard-rules.h					\
-	xfce-menu-or-rules.h						\
-	xfce-menu-and-rules.h						\
-	xfce-menu-not-rules.h						\
 	xfce-menu-item-pool.h						\
 	xfce-menu-item-cache.h						\
-	xfce-menu-move.h						\
 	xfce-menu-environment.h						\
 	xfce-menu-monitor.h						\
 	xfce-menu-item.h						\
@@ -36,18 +31,13 @@ libxfce4menu_headers =							\
 
 libxfce4menu_sources =							\
 	xfce-menu.c							\
+	xfce-menu-gio.c							\
 	xfce-menu-element.c						\
 	xfce-menu-separator.c						\
 	xfce-menu-layout.c						\
 	xfce-menu-directory.c						\
-	xfce-menu-rules.c						\
-	xfce-menu-standard-rules.c					\
-	xfce-menu-or-rules.c						\
-	xfce-menu-and-rules.c						\
-	xfce-menu-not-rules.c						\
 	xfce-menu-item-pool.c						\
 	xfce-menu-item-cache.c						\
-	xfce-menu-move.c						\
 	xfce-menu-environment.c						\
 	xfce-menu-monitor.c						\
 	xfce-menu-item.c						\
@@ -62,9 +52,6 @@ libxfce4menuinclude_HEADERS =						\
 	$(libxfce4menu_headers)						\
 	libxfce4menu.h							\
 	libxfce4menu-config.h
-
-libxfce4menu_0_1_la_DEPENDENCIES = 					\
-	$(top_builddir)/tdb/libtdb.la
 
 libxfce4menu_0_1_la_SOURCES =						\
 	$(libxfce4menu_sources)						\
@@ -87,8 +74,7 @@ libxfce4menu_0_1_la_LIBADD = 						\
 	$(GLIB_LIBS)							\
 	$(GTHREAD_LIBS)							\
 	$(GIO_LIBS)							\
-	$(LIBXFCE4UTIL_LIBS)						\
-	$(top_builddir)/tdb/libtdb.la
+	$(LIBXFCE4UTIL_LIBS)
 
 EXTRA_DIST =								\
 	libxfce4menu-config.h.in
